fix peta-syneU char/img

--- a/org/neume_names_phase1.org
+++ b/org/neume_names_phase1.org
@@ -1,4 +1,4 @@
-| Sub-Font | Char  | vvvvvImagePreviewvvvvv                           | Shorthand                       | Shorthand Alt | Proper                          | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
+| Sub-Font | Char  | ImagePreview                                     | Shorthand                       | Shorthand Alt | Proper                          | Proper Conditionals                                           | Proper + Full Pos | Notes                                                                                                                                                                               |
 |----------+-------+--------------------------------------------------+---------------------------------+---------------+---------------------------------+---------------------------------------------------------------+-------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | Main     | A     | [[./ka_fontimages/main-capital-A.png]]               | klasD                           |               | klasD                           |                                                               |                   |                                                                                                                                                                                     |
 |          | a     | [[./ka_fontimages/main-a.png]]                       | klasL                           |               | klasU                           |                                                               |                   |                                                                                                                                                                                     |
@@ -271,7 +271,7 @@
 |          | X     | [[./ka_fontimages/combo-capital-X.png]]              | olig-aposU                      |               | olig-aposU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | [     | [[./ka_fontimages/combo-left-bracket.png]]           | diplD-heteD                     |               | diplD-heteD                     |                                                               |                   |                                                                                                                                                                                     |
 |          | ]     | [[./ka_fontimages/combo-right-bracket.png]]          | tetrD-heteD                     |               | tetrD-heteD                     |                                                               |                   |                                                                                                                                                                                     |
-|          | +     | [[./ka_fontimages/combo-plus.png]]                   | peta-syneU                      |               | peta-syneU                      |                                                               |                   |                                                                                                                                                                                     |
+|          | _     | [[./ka_fontimages/combo-underscore.png]]             | peta-syneU                      |               | peta-syneU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | c     | [[./ka_fontimages/combo-c.png]]                      | olig-petaU                      |               | olig-petaU                      |                                                               |                   |                                                                                                                                                                                     |
 |          | i     | [[./ka_fontimages/combo-i.png]]                      | olig-hypsUL-ken2U               |               | olig-hypsUL-ken2U               |                                                               |                   |                                                                                                                                                                                     |
 |          | s     | [[./ka_fontimages/combo-s.png]]                      | klasU2L                         |               | (if olig-aposU) klasU           |                                                               |                   |                                                                                                                                                                                     |
