--- a/org/neume_names.adoc
+++ b/org/neume_names.adoc
@@ -790,15 +790,15 @@
 |olig-ken2DR
 |
 |
-|
+|This is the standard olig-ken2D.
 
 
 |
 |Ω
 |image:ka_fontimages/main-capital-omega.png[]
-|olig-ken2D-psefD2
+|olig-ken2D
 |
-|olig-ken2D-psefD2
+|olig-ken2D
 |substitue olig-ken2D for this if psef will follow
 |
 |Could be combined in TTF as ligature of olig-ken2D-psef, but kept separate for more freedom in coloring.
@@ -812,7 +812,7 @@
 |olig-kentDR
 |
 |
-|
+|This is the standard olig-kentD.
 
 
 |
@@ -1137,9 +1137,9 @@
 |
 |?
 |image:ka_fontimages/main-question-mark.png[]
-|vare-hapl-gorg
+|vare-hapl-gorgU
 |
-|vare-hapl-gorg
+|vare-hapl-gorgU
 |
 |
 |
@@ -1236,9 +1236,9 @@
 |
 |/
 |image:ka_fontimages/martyria-slash.png[]
-|plagal
+|plag
 |
-|
+|plag
 |
 |
 |
@@ -1348,7 +1348,7 @@
 |image:ka_fontimages/martyria-capital-A.png[]
 |mbetaU
 |
-|
+|mbetaU
 |
 |
 |
@@ -1359,10 +1359,10 @@
 |image:ka_fontimages/martyria-capital-B.png[]
 |chronmU
 |
+|chiU-gargU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1370,10 +1370,10 @@
 |image:ka_fontimages/martyria-capital-C.png[]
 |chrons2U
 |
+|chiU-hemeU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1381,7 +1381,7 @@
 |image:ka_fontimages/martyria-capital-D.png[]
 |mscbetaU
 |
-|
+|mbetaU-apoiU2
 |
 |
 |
@@ -1392,7 +1392,7 @@
 |image:ka_fontimages/martyria-capital-E.png[]
 |mnanaU
 |
-|
+|mnanaU
 |
 |
 |
@@ -1403,7 +1403,7 @@
 |image:ka_fontimages/martyria-capital-F.png[]
 |mscnenanoU
 |
-|
+|mscnenanoU
 |
 |
 |
@@ -1412,9 +1412,9 @@
 |
 |G
 |image:ka_fontimages/martyria-capital-G.png[]
-|zygosC
+|zygosU
 |
-|
+|mzygosU
 |
 |
 |
@@ -1423,9 +1423,9 @@
 |
 |H
 |image:ka_fontimages/martyria-capital-H.png[]
-|klitonC
+|klitonU
 |
-|
+|mklitonU
 |
 |
 |
@@ -1436,18 +1436,18 @@
 |image:ka_fontimages/martyria-capital-I.png[]
 |plfirst
 |
+|malfa-apoiU
 |
 |
-|
-|
+|Ligature for alpha with apostropoi above.
 
 
 |
 |J
 |image:ka_fontimages/martyria-capital-J.png[]
-|spathiC
+|mspathiU
 |
-|
+|mspathiU
 |
 |
 |
@@ -1458,10 +1458,10 @@
 |image:ka_fontimages/martyria-capital-M.png[]
 |chronf2U
 |
+|chiU-digoU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1469,10 +1469,10 @@
 |image:ka_fontimages/martyria-capital-N.png[]
 |chronfU
 |
+|chiU-gorgU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1480,10 +1480,10 @@
 |image:ka_fontimages/martyria-capital-O.png[]
 |plsecondsc
 |
+|mbeta-apoiU
 |
 |
-|
-|
+|Ligature for beta with apostrophoi above.
 
 
 |
@@ -1491,7 +1491,7 @@
 |image:ka_fontimages/martyria-capital-P.png[]
 |gravemode
 |
-|
+|grav
 |
 |
 |
@@ -1500,9 +1500,9 @@
 |
 |Q
 |image:ka_fontimages/martyria-capital-Q.png[]
-|malphaU
+|malfaU
 |
-|
+|malfaU
 |
 |
 |
@@ -1513,10 +1513,10 @@
 |image:ka_fontimages/martyria-capital-R.png[]
 |mdeltaapoU
 |
+|mdeltU-apoiU2
 |
 |
-|
-|
+|Ligature or delta with apostrophoi above.
 
 
 |
@@ -1524,7 +1524,7 @@
 |image:ka_fontimages/martyria-capital-S.png[]
 |mnenanoU
 |
-|
+|mnenanoU
 |
 |
 |
@@ -1533,20 +1533,20 @@
 |
 |T
 |image:ka_fontimages/martyria-capital-T.png[]
-|malphaapoU
+|malfaapoU
+|
+|malfaU-apoiU2
 |
 |
-|
-|
-|
+|Ligature for alpha with apostrophoi above.
 
 
 |
 |U
 |image:ka_fontimages/martyria-capital-U.png[]
-|mdeltaU
+|mdeltU
 |
-|
+|mdeltU
 |
 |
 |
@@ -1557,10 +1557,10 @@
 |image:ka_fontimages/martyria-capital-V.png[]
 |chronsU
 |
+|chiU-argoU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1568,7 +1568,7 @@
 |image:ka_fontimages/martyria-capital-W.png[]
 |mlamdaU
 |
-|
+|mlamdaU
 |
 |
 |
@@ -1579,10 +1579,10 @@
 |image:ka_fontimages/martyria-capital-X.png[]
 |chrons3U
 |
+|chiU-diarU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1590,7 +1590,7 @@
 |image:ka_fontimages/martyria-capital-Y.png[]
 |mhypoU
 |
-|
+|mhypoU
 |
 |
 |
@@ -1601,10 +1601,10 @@
 |image:ka_fontimages/martyria-capital-Z.png[]
 |chrons4U
 |
+|chiU-tetgU2
 |
 |
-|
-|
+|Goes above a martyria.
 
 
 |
@@ -1612,10 +1612,10 @@
 |image:ka_fontimages/martyria-left-bracket.png[]
 |fourthmode
 |
+|mdelt-apoiU-hypsU2
 |
 |
-|
-|
+|Ligature or delta with apostrofoi above.
 
 
 |
@@ -1623,7 +1623,7 @@
 |image:ka_fontimages/martyria-up-caret.png[]
 |mzoU
 |
-|
+|mzoU
 |
 |
 |
@@ -1632,9 +1632,9 @@
 |
 |`
 |image:ka_fontimages/martyria-grave.png[]
-|mtonos
+|mprim
 |
-|
+|mprim
 |
 |
 |
@@ -1645,7 +1645,7 @@
 |image:ka_fontimages/martyria-a.png[]
 |mbeta
 |
-|
+|mbeta
 |
 |
 |
@@ -1656,7 +1656,7 @@
 |image:ka_fontimages/martyria-b.png[]
 |chronm
 |
-|
+|chi-gargU
 |
 |
 |
@@ -1667,7 +1667,7 @@
 |image:ka_fontimages/martyria-c.png[]
 |chrons2
 |
-|
+|chi-hemeU
 |
 |
 |
@@ -1678,7 +1678,7 @@
 |image:ka_fontimages/martyria-d.png[]
 |mscbeta
 |
-|
+|mbeta-apoiU
 |
 |
 |
@@ -1689,7 +1689,7 @@
 |image:ka_fontimages/martyria-e.png[]
 |mnana
 |
-|
+|mnana
 |
 |
 |
@@ -1700,7 +1700,7 @@
 |image:ka_fontimages/martyria-f.png[]
 |mscnenano
 |
-|
+|mscnenano
 |
 |
 |
@@ -1709,9 +1709,9 @@
 |
 |g
 |image:ka_fontimages/martyria-g.png[]
-|zygos
+|mzygos
 |
-|
+|mzygos
 |
 |
 |
@@ -1720,9 +1720,9 @@
 |
 |h
 |image:ka_fontimages/martyria-h.png[]
-|kliton
+|mkliton
 |
-|
+|mkliton
 |
 |
 |
@@ -1733,7 +1733,7 @@
 |image:ka_fontimages/martyria-i.png[]
 |firstmode
 |
-|
+|malpha
 |
 |
 |
@@ -1742,9 +1742,9 @@
 |
 |j
 |image:ka_fontimages/martyria-j.png[]
-|spathi
+|mspathi
 |
-|
+|mspathi
 |
 |
 |
@@ -1755,7 +1755,7 @@
 |image:ka_fontimages/martyria-m.png[]
 |chronf2
 |
-|
+|chi-digoU
 |
 |
 |
@@ -1766,7 +1766,7 @@
 |image:ka_fontimages/martyria-n.png[]
 |chronf
 |
-|
+|chi-gorgU
 |
 |
 |
@@ -1777,10 +1777,10 @@
 |image:ka_fontimages/martyria-o.png[]
 |secondmode
 |
+|mscbeta-mfon
 |
 |
-|
-|
+|Is actually ligature of mscbeta and U+1D0AF.
 
 
 |
@@ -1788,18 +1788,18 @@
 |image:ka_fontimages/martyria-p.png[]
 |thirdmodenana
 |
+|mnana-isa2U
 |
 |
-|
-|
+|Ligature for mnana with isakia above.
 
 
 |
 |q
 |image:ka_fontimages/martyria-q.png[]
-|malpha
+|malfa
 |
-|
+|malfa
 |
 |
 |
@@ -1810,10 +1810,10 @@
 |image:ka_fontimages/martyria-r.png[]
 |mdeltaapo
 |
+|mdelt-apoiU
 |
 |
-|
-|
+|Ligature for delta with apostrophoi above.
 
 
 |
@@ -1821,7 +1821,7 @@
 |image:ka_fontimages/martyria-s.png[]
 |mnenano
 |
-|
+|mnena
 |
 |
 |
@@ -1830,20 +1830,20 @@
 |
 |t
 |image:ka_fontimages/martyria-t.png[]
-|malphaapo
+|malfaapo
+|
+|malfa-apoiU
 |
 |
-|
-|
-|
+|Ligature for alpha with apostrophoi above.
 
 
 |
 |u
 |image:ka_fontimages/martyria-u.png[]
-|mdelta
+|mdelt
 |
-|
+|mdelt
 |
 |
 |
@@ -1854,7 +1854,7 @@
 |image:ka_fontimages/martyria-v.png[]
 |chrons
 |
-|
+|chi-argoU
 |
 |
 |
@@ -1865,7 +1865,7 @@
 |image:ka_fontimages/martyria-w.png[]
 |mlamda
 |
-|
+|mlamda
 |
 |
 |
@@ -1876,7 +1876,7 @@
 |image:ka_fontimages/martyria-x.png[]
 |chrons3
 |
-|
+|chi-diarU
 |
 |
 |
@@ -1887,7 +1887,7 @@
 |image:ka_fontimages/martyria-y.png[]
 |mhypo
 |
-|
+|mhypo
 |
 |
 |
@@ -1898,7 +1898,7 @@
 |image:ka_fontimages/martyria-z.png[]
 |chrons4
 |
-|
+|chi-tetgU
 |
 |
 |
@@ -1909,18 +1909,18 @@
 |image:ka_fontimages/martyria-left-curly-bracket.png[]
 |plfourth
 |
+|deta-apoiU
 |
 |
-|
-|
+|Ligature for delta with apostrophoi above.
 
 
 |
 |~
 |image:ka_fontimages/martyria-tilde.png[]
-|mtonosU
+|mprimU
 |
-|
+|mprimU
 |
 |
 |
@@ -1931,7 +1931,7 @@
 |image:ka_fontimages/martyria-pi.png[]
 |thirdmode
 |
-|
+|nana-apoiU
 |
 |
 |
@@ -1940,9 +1940,9 @@
 |
 |“
 |image:ka_fontimages/martyria-left-double-quote.png[]
-|legetos
+|lege
 |
-|
+|lege
 |
 |
 |
@@ -1973,12 +1973,12 @@
 |
 |"
 |image:ka_fontimages/fthora-double-quote.png[]
-|sharp2R
+|sharp2DR
 |
+|sharp2DR
+|if after apos
 |
-|
-|
-|
+|Sharp2 for apostrofos.
 
 
 |
@@ -2017,7 +2017,7 @@
 |
 |&
 |image:ka_fontimages/fthora-ampersand.png[]
-|indicateniR
+|indicateneR
 |
 |
 |
@@ -2028,31 +2028,31 @@
 |
 |'
 |image:ka_fontimages/fthora-single-quote.png[]
-|sharp2
+|sharp2D
+|
+|sharp2D
 |
 |
-|
-|
-|
+|Standard sharp2 for olig, ison, etc.
 
 
 |
 |+
 |image:ka_fontimages/fthora-plus.png[]
-|sharpR
+|sharpDR
 |
+|sharpDR
+|if after apos
 |
-|
-|
-|
+|Sharp for apostrofos.
 
 
 |
 |,
 |image:ka_fontimages/fthora-comma.png[]
-|permflat
+|permflatU
 |
-|
+|permflatU
 |
 |
 |
@@ -2061,20 +2061,20 @@
 |
 |-
 |image:ka_fontimages/fthora-hyphen.png[]
-|flat
+|flatU
+|
+|flatU
 |
 |
-|
-|
-|
+|Standard flat for olig, ison, etc.
 
 
 |
 |.
 |image:ka_fontimages/fthora-period.png[]
-|permsharp
+|permsharpU
 |
-|
+|permsharpU
 |
 |
 |
@@ -2160,23 +2160,23 @@
 |
 |:
 |image:ka_fontimages/fthora-colon.png[]
-|flat2R
+|flat2U2R2
 |
+|flat2U2R2
+|if after olig-[ison/apos/elaf]-kenUR
 |
-|
-|
-|
+|Flat2 for kentimata in olig-ken2R.
 
 
 |
 |;
 |image:ka_fontimages/fthora-semicolon.png[]
-|flat2
+|flat2U
+|
+|flat2U
 |
 |
-|
-|
-|
+|Standard flat2 for olig, ison, etc.
 
 
 |
@@ -2184,8 +2184,8 @@
 |image:ka_fontimages/fthora-left-caret.png[]
 |permflatD
 |
-|
-|
+|permflatD
+|if after apos
 |
 |
 
@@ -2193,12 +2193,12 @@
 |
 |=
 |image:ka_fontimages/fthora-equal-sign.png[]
-|sharp
+|sharpD
+|
+|sharpD
 |
 |
-|
-|
-|
+|Standard sharp for oligon, ison, etc.
 
 
 |
@@ -2206,8 +2206,8 @@
 |image:ka_fontimages/fthora-right-caret.png[]
 |permsharpD
 |
-|
-|
+|permsharpD
+|if after apos
 |
 |
 
@@ -2228,8 +2228,8 @@
 |image:ka_fontimages/fthora-capital-A.png[]
 |fthorahardchromaticpaDR
 |
-|
-|
+|fthorahardchromaticpaDR
+|if after apos
 |
 |
 
@@ -2239,8 +2239,8 @@
 |image:ka_fontimages/fthora-capital-D.png[]
 |fthorasoftchromaticdiDR
 |
-|
-|
+|fthorasoftchromaticdiDR
+|if after apos
 |
 |
 
@@ -2250,8 +2250,8 @@
 |image:ka_fontimages/fthora-capital-E.png[]
 |fthoradiatonicgaDR
 |
-|
-|
+|fthoradiatonicgaDR
+|if after apos
 |
 |
 
@@ -2261,8 +2261,8 @@
 |image:ka_fontimages/fthora-capital-F.png[]
 |fthorasoftchromatickeDR
 |
-|
-|
+|fthorasoftchromatickeDR
+|if after apos
 |
 |
 
@@ -2272,8 +2272,8 @@
 |image:ka_fontimages/fthora-capital-G.png[]
 |chroizygosDR
 |
-|
-|
+|chroizygosDR
+|if after apos
 |
 |
 
@@ -2283,8 +2283,8 @@
 |image:ka_fontimages/fthora-capital-H.png[]
 |chroiklitonDR
 |
-|
-|
+|chroiklitonDR
+|if after apos
 |
 |
 
@@ -2294,8 +2294,8 @@
 |image:ka_fontimages/fthora-capital-I.png[]
 |fthoradiatonicniDR
 |
-|
-|
+|fthoradiatonicniDR
+|if after apos
 |
 |
 
@@ -2305,8 +2305,8 @@
 |image:ka_fontimages/fthora-capital-J.png[]
 |chroispathiDR
 |
-|
-|
+|chroispathiDR
+|if after apos
 |
 |
 
@@ -2316,8 +2316,8 @@
 |image:ka_fontimages/fthora-capital-K.png[]
 |fthoraajemDR
 |
-|
-|
+|fthoraajemDR
+|if after apos
 |
 |
 
@@ -2327,8 +2327,8 @@
 |image:ka_fontimages/fthora-capital-Q.png[]
 |fthoradiatonicpaDR
 |
-|
-|
+|fthoradiatonicpaDR
+|if after apos
 |
 |
 
@@ -2338,8 +2338,8 @@
 |image:ka_fontimages/fthora-capital-R.png[]
 |fthoradiatonicdiDR
 |
-|
-|
+|fthoradiatonicdiDR
+|if after apos
 |
 |
 
@@ -2349,8 +2349,8 @@
 |image:ka_fontimages/fthora-capital-S.png[]
 |fthorahardchromaticdiDR
 |
-|
-|
+|fthorahardchromaticdiDR
+|if after apos
 |
 |
 
@@ -2360,8 +2360,8 @@
 |image:ka_fontimages/fthora-capital-T.png[]
 |fthoradiatonickeDR
 |
-|
-|
+|fthoradiatonickeDR
+|if after apos
 |
 |
 
@@ -2371,8 +2371,8 @@
 |image:ka_fontimages/fthora-capital-U.png[]
 |fthoradiatonichighniDR
 |
-|
-|
+|fthoradiatonichighniDR
+|if after apos
 |
 |
 
@@ -2382,8 +2382,8 @@
 |image:ka_fontimages/fthora-capital-W.png[]
 |fthoradiatonicvouDR
 |
-|
-|
+|fthoradiatonicvouDR
+|if after apos
 |
 |
 
@@ -2393,8 +2393,8 @@
 |image:ka_fontimages/fthora-capital-Y.png[]
 |fthoradiatonichighzoDR
 |
-|
-|
+|fthoradiatonichighzoDR
+|if after apos
 |
 |
 
@@ -2402,23 +2402,23 @@
 |
 |[
 |image:ka_fontimages/fthora-left-bracket.png[]
-|flat1
+|flat1U
+|
+|flat1U
 |
 |
-|
-|
-|
+|Standard flat1 for olig, ison, etc.
 
 
 |
 |]
 |image:ka_fontimages/fthora-right-bracket.png[]
-|sharp1
+|sharp1D
+|
+|sharp1D
 |
 |
-|
-|
-|
+|Standard sharp1 for olig, ison, etc.
 
 
 |
@@ -2435,12 +2435,12 @@
 |
 |+
 |image:ka_fontimages/fthora-plus.png[]
-|flatR
+|sharpD
 |
+|sharpD
+|if after apos
 |
-|
-|
-|
+|Sharp for apostrofos.
 
 
 |
@@ -2448,7 +2448,7 @@
 |image:ka_fontimages/fthora-a.png[]
 |fthorahardchromaticpaU
 |
-|
+|fhcpaU
 |
 |
 |
@@ -2492,7 +2492,7 @@
 |image:ka_fontimages/fthora-g.png[]
 |chroizygosU
 |
-|
+|fzygosU
 |
 |
 |
@@ -2503,7 +2503,7 @@
 |image:ka_fontimages/fthora-h.png[]
 |chroiklitonU
 |
-|
+|fklitοnU
 |
 |
 |
@@ -2622,23 +2622,23 @@
 |
 |{
 |image:ka_fontimages/fthora-left-curly-bracket.png[]
-|flat1R
+|flat1U2R2
 |
+|flat1U2R2
+|if after olig-[ison/apos/elaf]-kenUR
 |
-|
-|
-|
+|Flat1 for kentimata in olig-ken2R.
 
 
 |
 |}
 |image:ka_fontimages/fthora-right-curly-bracket.png[]
-|sharp1R
+|sharp1DR
 |
+|sharp1DR
+|if after apos
 |
-|
-|
-|
+|Sharp1 for apostrofos.
 
 
 |
@@ -2649,7 +2649,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2660,7 +2660,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2668,10 +2668,10 @@
 |image:ka_fontimages/fthora-copyright.png[]
 |chroizygosUR
 |
+|fzygU
 |
 |
-|
-|
+|Goes above martyria.
 
 
 |
@@ -2682,18 +2682,18 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
 |´
 |image:ka_fontimages/fthora-acute.png[]
-|(over martyria)
+|fnanaU
+|
+|fnanaU
 |
 |
-|
-|
-|
+|Goes above martyria.
 
 
 |
@@ -2704,7 +2704,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2715,7 +2715,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2726,7 +2726,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2737,7 +2737,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2748,7 +2748,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2759,18 +2759,18 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
 |–
 |image:ka_fontimages/fthora-dash.png[]
-|flatR2
+|flatU2R2
 |
+|flatU2R2
+|if after olig-[ison/apos/elaf]-kenUR
 |
-|
-|
-|
+|Flat for kentimata in olig-ken2R.
 
 
 |
@@ -2781,7 +2781,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2792,7 +2792,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2803,7 +2803,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2814,7 +2814,7 @@
 |
 |
 |
-|
+|Goes above martyria.
 
 
 |
@@ -2822,10 +2822,10 @@
 |image:ka_fontimages/fthora-unequal-sign.png[]
 |sharpD2
 |
+|sharpD2
+|if after apos2
 |
-|
-|
-|
+|Sharp for apos2 ligature.
 
 
 |
@@ -2842,9 +2842,9 @@
 |Combo
 |-
 |image:ka_fontimages/combo-hyphen.png[]
-|peta-hypo
+|peta-hypoU
 |
-|
+|peta-hypoU
 |
 |
 |
@@ -2864,9 +2864,9 @@
 |
 |1
 |image:ka_fontimages/combo-1.png[]
-|olig-hypsUL-ken1U-hypsU2
+|olig-hypsUL-kentU-hypsU2
 |
-|olig-hypsUL-ken1U-hypsU2
+|olig-hypsUL-kentU-hypsU2
 |
 |
 |
@@ -2897,9 +2897,9 @@
 |
 |4
 |image:ka_fontimages/combo-4.png[]
-|olig-hypsUL-ken1U-hypsUR-hypsU2
+|olig-hypsUL-kentU-hypsUR-hypsU2
 |
-|olig-hypsUL-ken1U-hypsUR-hypsU2
+|olig-hypsUL-kentU-hypsUR-hypsU2
 |
 |
 |
@@ -2998,7 +2998,7 @@
 |image:ka_fontimages/combo-s.png[]
 |klasU2L
 |
-|(if olig-aposU) klasU
+|if after olig-aposU
 |
 |
 |
@@ -3042,10 +3042,10 @@
 |image:ka_fontimages/combo-left-curly-bracket.png[]
 |tripD0.9R
 |
-|tripD-heteD
+|tripD-heteD2
 |
 |
-|
+|Ligature of tripD-heteD2. This may never be used because hete is usually colored red.
 
 
 |
@@ -3053,10 +3053,10 @@
 |image:ka_fontimages/combo-right-curly-bracket.png[]
 |spsefD2
 |
-|psef
+|psefD2
+|if hapl/dipl/tetr-hete
 |
-|
-|(if hapl/dipl/trip/tetr/ and hete), duplicated in Main
+|hete might have slightly different position if coming after hapl, diple, etc., so need special psef for this case.
 
 
 |
@@ -3073,34 +3073,34 @@
 |Chronos
 |,
 |image:ka_fontimages/chronos-comma.png[]
-|argon
+|argoU
+|
+|argoU
 |
 |
-|
-|
-|
+|Standard argon. Should only be above olig or an olig combo.
 
 
 |
 |.
 |image:ka_fontimages/chronos-period.png[]
-|hemi
+|hemiU
+|
+|hemiU
 |
 |
-|
-|
-|hemiolion
+|Standard hemiolion. Should only be above olig or olig combo.
 
 
 |
 |/
 |image:ka_fontimages/chronos-slash.png[]
-|diargon
+|diargU
+|
+|diargU
 |
 |
-|
-|
-|
+|Standard diagron. Should only be above olig or olig combo.
 
 
 |
@@ -3108,10 +3108,10 @@
 |image:ka_fontimages/chronos-capital-A.png[]
 |dotdigorg
 |
+|dotdigoU
 |
 |
-|
-|
+|Standard dot digorgon above oligon, ison, etc.
 
 
 |
@@ -3260,12 +3260,12 @@
 |
 |a
 |image:ka_fontimages/chronos-a.png[]
-|digorg
+|digorgU
+|
+|digoU
 |
 |
-|
-|
-|
+|Above olig, ison, etc.
 
 
 |
@@ -3273,10 +3273,10 @@
 |image:ka_fontimages/chronos-b.png[]
 |gorgU2L
 |
+|gorgU2L
 |
 |
-|
-|
+|Above olig-[hypo/apos/elaf]-ken2UR
 
 
 |
@@ -3284,10 +3284,10 @@
 |image:ka_fontimages/chronos-c.png[]
 |gorgD
 |
+|gorgD
 |
 |
-|
-|
+|Gorgon below olig, ison, etc.
 
 
 |
@@ -3306,10 +3306,10 @@
 |image:ka_fontimages/chronos-m.png[]
 |gorgU2R
 |
+|gorgU2R
 |
 |
-|
-|
+|Above olig-[hypo/apos/elaf]-ken2U
 
 
 |
@@ -3317,10 +3317,10 @@
 |image:ka_fontimages/chronos-n.png[]
 |gorgDR
 |
+|gorgDR
+|if after apos or hypo
 |
-|
-|
-|
+|Below apostrophos or hyporroe.
 
 
 |
@@ -3350,10 +3350,10 @@
 |image:ka_fontimages/chronos-s.png[]
 |digorgU2
 |
+|digoU2
+|if after olig-ken2U
 |
-|
-|
-|
+|Should be only digorgon choice if olig-ken2U.
 
 
 |
@@ -3361,10 +3361,10 @@
 |image:ka_fontimages/chronos-v.png[]
 |gorgR
 |
+|gorgUR
+|if after apos
 |
-|
-|
-|
+|Gorgon above apostrophos.
 
 
 |
@@ -3383,10 +3383,10 @@
 |image:ka_fontimages/chronos-x.png[]
 |gorgU2
 |
+|gorgU2
+|if after olig-ken2U
 |
-|
-|
-|
+|Should be only gorgon choice if olig-ken2U.
 
 
 |
@@ -3394,10 +3394,10 @@
 |image:ka_fontimages/chronos-z.png[]
 |gorgU
 |
+|gorgU
 |
 |
-|
-|
+|Above oligon, ison, etc.
 
 
 |
@@ -3408,7 +3408,7 @@
 |
 |
 |
-|hyfen
+|Standard hyphen.
 
 
 |
