Fix incorrect gorgon name in table.

--- a/org/neume_names.adoc
+++ b/org/neume_names.adoc
@@ -3315,9 +3315,9 @@
 |
 |Z
 |image:ka_fontimages/chronos-capital-Z.png[]
-|gorgdotU
+|dotgorgU
 |
-|gorgdotU
+|dotgorgU
 |
 |
 |Above oligon, ison, etc.
